# midi-stutter

./: .gitignore  README.md  create_midi.py  flake.nix  pyproject.toml  setup.py  ui_create_midi.py
