[project]
name = "midi-stutter"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click",
    "mido",
]

[project.scripts]
create-midi-stutter = "create_midi:generate"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["create_midi"]